force-app/main/default/objects/KimbleOne__KimbleOneConfigSetting__c/KimbleOne__KimbleOneConfigSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings</description>
    <label>KimbleOne Config (Setting)</label>
</CustomObject>