force-app/main/default/objects/KimbleOne__KimbleOneConfigSetting__c/fields/KimbleOne__CapabilityHierarchyDelimiter__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CapabilityHierarchyDelimiter__c</fullName>
    <defaultValue>&quot;:&quot;</defaultValue>
    <label>Capability Hierarchy Delimiter</label>
    <length>10</length>
    <type>Text</type>
</CustomField>