force-app/main/default/objects/KimbleOne__KimbleOneConfigSetting__c/fields/KimbleOne__CRMIntegrationMode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CRMIntegrationMode__c</fullName>
    <defaultValue>&quot;standalone&quot;</defaultValue>
    <description>standalone, standalonelegacy, connected</description>
    <label>CRM Integration Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>