force-app/main/default/objects/KimbleOne__KimbleOneConfigSetting__c/fields/KimbleOne__EndingSoonTolerance__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EndingSoonTolerance__c</fullName>
    <defaultValue>14</defaultValue>
    <label>Ending Soon Tolerance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>