force-app/main/default/objects/KimbleOne__KimbleOneConfigSetting__c/fields/KimbleOne__EventCleardownThresholdDays__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EventCleardownThresholdDays__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of days after which an internal event run date should be considered for deletion by EventClassService.JobCleardownCompletedInternalEvents</description>
    <label>EventCleardownThresholdDays</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>