force-app/main/default/objects/KimbleOne__KimbleOneConfigSetting__c/fields/KimbleOne__JobRetryThreshold__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__JobRetryThreshold__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Number of times the Job Framework will attempt to retry a failed job</description>
    <label>JobRetryThreshold</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>