force-app/main/default/objects/KimbleOne__KimbleOneConfigSetting__c/fields/KimbleOne__LowRemainingUsageTolerance__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LowRemainingUsageTolerance__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Low Usage Tolerance (Pct Remaining)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>