force-app/main/default/objects/KimbleOne__KimbleOneConfigSetting__c/fields/KimbleOne__LowUsageDaysTolerance__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LowUsageDaysTolerance__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Low Usage Days Tolerance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>